# roDV

./: .gitignore  CMakeLists.txt  LICENSE  PROJECT_SUMMARY.md
include/rodv/: bam_reader.h
resouces/: pairhmm_debug.txt
src/: CMakeLists.txt  rodv_main.cpp
src/core/: CMakeLists.txt  bam_reader.cpp  pairhmm_schedule.cpp  pairhmm_schedule.h
src/core/pairhmm/: CMakeLists.txt
src/core/pairhmm/common/: common.h  context.h  cpu_features.h
src/core/pairhmm/inter/: CMakeLists.txt  pairhmm_inter.cpp  pairhmm_inter.h  pairhmm_inter_api.cpp  pairhmm_inter_api.h  simd_traits.h  simd_traits_avx2.h  simd_traits_avx512.h
src/core/pairhmm/intra/: CMakeLists.txt  README.md  pairhmm_api.cpp  pairhmm_api.h  pairhmm_avx2.cpp  pairhmm_avx512.cpp  pairhmm_impl.cpp  pairhmm_impl.h  simd_traits.h  simd_traits_avx2.h  simd_traits_avx512.h
src/core/test/: CMakeLists.txt  assemble_log_parser.cpp  assemble_log_parser.h  pairhmm_perftest.cpp  pairhmm_schedule_unittest.cpp  pairhmm_test.cpp  pairhmm_test_avx2.cpp  pairhmm_unitest_from_assemble.cpp  pairhmm_unittest.cpp  test_case_common.h
src/iostream/: CMakeLists.txt  bam_handle.cpp  bam_handle.h  bed_handle.cpp  bed_handle.h  genomic_interval_handle.h  vcf_handle.cpp  vcf_handle.h
tests/: test_bam_reader.cpp
tools/: rodv_main.cpp
